SDK Partially Ported. Much more work needed

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,11 @@ test=pytest
 universal = 1
 
 [flake8]
-ignore = E203, W503
-max-line-length = 88
+# ignore = E203, W503
+max-line-length = 120
 inline-quotes = double
+extend-ignore = E203, E501, W503
+select = C,E,F,W,B,B950
 
 [mypy]
 ignore_missing_imports = true
