--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     check
-    py39,
+    py310,
     coverage
     docs
 
@@ -19,6 +19,7 @@ basepython = python3
 deps = coverage[toml]
 skip_install = True
 skipsdist = True
+allowlist_externals = /usr/bin/env
 commands =
     /usr/bin/env bash -c "{envpython} -m coverage combine .coverage.*"
     coverage report
@@ -39,4 +40,4 @@ commands = sphinx-build {posargs:-E} -b html docs dist/docs
 
 [gh-actions]
 python =
-    3.9: py39
+    3.10: py310
