--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Set up python
-      - name: Set up Python 3.x
+      - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.10
 
       # Install Deps
       - name: Install dependencies
@@ -25,12 +25,12 @@ jobs:
       - name: Run Code Linters
         run: tox -e check
 
-  
-  test:
+
+    test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.10]
     steps:
       # Checkout Repo
       - uses: actions/checkout@v2
@@ -60,7 +60,7 @@ jobs:
         with:
           name: coverage_${{ matrix.python-version }}
           path: .coverage.*
-  
+
   coverage:
     needs: test
     runs-on: ubuntu-latest
@@ -69,10 +69,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Set up python
-      - name: Set up Python 3.x
+      - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.10
 
       # Install Deps
       - name: Install Dependencies
