--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["setuptools", "wheel", "Cython"]
+
 [tool.black]
-target-version = ["py39"]
+target-version = ["py310"]
+line-length=120
 
 [tool.coverage.run]
 relative_files = true
