Clean up some more

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ basepython = python3
 deps = coverage[toml]
 skip_install = True
 skipsdist = True
+allowlist_externals = /usr/bin/env
 commands =
     /usr/bin/env bash -c "{envpython} -m coverage combine .coverage.*"
     coverage report
